crates/rascal/src/snapshots/rascal__tests__all_samples@op_precedence__add_sub.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/op_precedence/add_sub.as
---
initializer:
  actions:
    - ConstantPool:
        - a
        - b
        - c
        - a=
        - ", b="
        - ", c="
        - "----"
        - "a + b - c = "
        - "(a + b) - c = "
        - "---"
        - "a - b + c = "
        - "(a - b) + c = "
        - "a + b - c + b = "
        - "(((a + b) - c) + b) = "
        - "a + -b = "
        - "a - -b = "
    - Push:
        - Constant: 0
        - Integer: 10
    - DefineLocal
    - Push:
        - Constant: 1
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 2
        - Integer: 2
    - DefineLocal
    - Push:
        - Constant: 3
        - Constant: 0
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - Add2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 5
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 7
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Subtract
    - Add2
    - Trace
    - Push:
        - Constant: 8
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Subtract
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 10
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Subtract
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 11
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Subtract
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 12
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Subtract
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 13
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Subtract
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 14
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 0
        - Constant: 1
    - GetVariable
    - Subtract
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 15
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 0
        - Constant: 1
    - GetVariable
    - Subtract
    - Subtract
    - Add2
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
