crates/rascal/src/snapshots/rascal__tests__all_samples@op_precedence__bit_shifts.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/op_precedence/bit_shifts.as
---
initializer:
  actions:
    - ConstantPool:
        - a
        - b
        - c
        - a=
        - ", b="
        - ", c="
        - "----"
        - "a << b >> c = "
        - "((a << b) >> c) = "
        - "---"
        - "a >> b << c = "
        - "((a >> b) << c) = "
        - "a >>> b >> c = "
        - "((a >>> b) >> c) = "
        - "a << b >> c >>> b = "
        - "(((a << b) >> c) >>> b) = "
        - "a << b + c = "
        - "a << (b + c) = "
        - "a * b << c = "
        - "(a * b) << c = "
    - Push:
        - Constant: 0
        - Integer: 16
    - DefineLocal
    - Push:
        - Constant: 1
        - Integer: 2
    - DefineLocal
    - Push:
        - Constant: 2
        - Integer: 1
    - DefineLocal
    - Push:
        - Constant: 3
        - Constant: 0
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - Add2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 5
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 7
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitLShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitRShift
    - Add2
    - Trace
    - Push:
        - Constant: 8
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitLShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitRShift
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 10
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitRShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 11
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitRShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 12
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitURShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitRShift
    - Add2
    - Trace
    - Push:
        - Constant: 13
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitURShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitRShift
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 14
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitLShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitRShift
    - Push:
        - Constant: 1
    - GetVariable
    - BitURShift
    - Add2
    - Trace
    - Push:
        - Constant: 15
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitLShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitRShift
    - Push:
        - Constant: 1
    - GetVariable
    - BitURShift
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 16
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 17
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 18
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 19
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - BitLShift
    - Add2
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
